@@ -1,6 +1,9 @@
 Release 0.6.3 (in development)
 ==============================
 
+* #229: Fix autodoc failures with members that raise errors
+  on ``getattr()``.
+
 * #205: When copying files, don't copy full stat info, only
   modification times.
 
